fix：魚のあしらいのz-indexを修正、サイトマップのmarginを修正

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -51,6 +51,7 @@ $color-text: $color-black;
 ////////////////////
 // z-index
 ////////////////////
+$z-index-decoration-fish: -1;
 $z-index-heroTitle: 10;
 $z-index-toTop: 100;
 $z-index-header: 1000;
