--- a/src/sass/module/_decoration-fish.scss
+++ b/src/sass/module/_decoration-fish.scss
@@ -16,6 +16,7 @@
 	background-size: contain;
 	background-position: center center;
 	transform: scaleX(-1);
+	z-index: $z-index-decoration-fish;
 
 	@include mq('md') {
 		top: rem(-69);
